# sellers-accounts-admin-bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init_tg_client.py  main.py  pyproject.toml
config/: .env.example  config.py
config/settings/: base.py  setting.py
internal/app/: app.py  run.py
internal/entities/: models.py
internal/entities/database/: __init__.py  accounts.py  accounts_data.py  base.py  categories.py  chats.py  deals.py  sellers.py  shops.py  users.py
internal/entities/states/: StateModels.py  states.py
internal/handlers/: __init__.py
internal/handlers/admins/: __init__.py  about_shop.py  acc_types.py  balance.py  deals.py  menu.py  seller_info.py  seller_wallet.py
internal/messages/: add_acc_type_1.md  add_acc_type_success.md  admin.md  change_balance.md  change_balance_complete.md  change_balance_err.md  change_description_seller.md  change_name_shop.md  change_photo_shop.md  change_seller_wallet_1.md  change_seller_wallet_start.md  delete_acc_type_1.md  delete_acc_type_success.md  err_cancel_buy.md  history_buy.md  input_DealId_admin.md  seller_info.md  seller_info_er.md  success_cancel_buy.md
internal/service/: GetMessage.py  SendDeals.py  keyboards.py
misc/: is_float.py
pkg/: logger.py  middleware.py
